--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "moment": "^2.18.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.7.6"
   },
