--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "rxjs": "^5.1.0",
+    "socket.io": "^1.7.4",
+    "socket.io-client": "^1.7.4",
+    "twitter-stream-api": "^0.5.1",
     "zone.js": "^0.7.6"
   },
   "devDependencies": {
