--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
+    "ng2-tweet": "0.0.16",
     "rxjs": "^5.1.0",
     "socket.io": "^1.7.4",
     "socket.io-client": "^1.7.4",
+    "twitter-inline-oembed": "0.0.1",
     "twitter-stream-api": "^0.5.1",
     "zone.js": "^0.7.6"
   },
