added link preview and dbpedia

--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
+    "link-preview": "^1.0.0",
     "moment": "^2.18.1",
     "ng2-pagination": "^2.0.1",
     "ng2-tweet": "0.0.16",
+    "page-previewer": "^0.1.7",
+    "react-native-link-preview": "^1.1.0",
     "rxjs": "^5.1.0",
     "socket.io": "^1.7.4",
     "socket.io-client": "^1.7.4",
