--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^2.4.0",
     "@angular/forms": "^2.4.0",
     "@angular/http": "^2.4.0",
+    "@angular/material": "2.0.0-alpha.9-3",
     "@angular/platform-browser": "^2.4.0",
     "@angular/platform-browser-dynamic": "^2.4.0",
     "@angular/router": "^3.4.0",
@@ -24,11 +25,14 @@
     "@types/chart.js": "^2.4.2",
     "@types/jquery": "^2.0.41",
     "angular2-chartjs": "^0.2.0",
+    "angular2-material-chips": "^1.0.5",
+    "angular2-tag-input": "^1.2.3",
     "chart.js": "^2.5.0",
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "link-preview": "^1.0.0",
     "moment": "^2.18.1",
+    "ng2-chips": "0.0.13",
     "ng2-pagination": "^2.0.1",
     "ng2-tweet": "0.0.16",
     "page-previewer": "^0.1.7",
