--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ngui/auto-complete": "^0.13.2",
     "@types/chart.js": "^2.4.2",
     "@types/jquery": "^2.0.41",
+    "@types/socket.io-client": "^1.4.29",
     "angular2-chartjs": "^0.2.0",
     "angular2-material-chips": "^1.0.5",
     "angular2-tag-input": "^1.2.3",
